get rid of tellform names
